# gnss_ws

./: .gitignore  CLAUDE.md  README.md  ubx.repos
docs/: step0_shenzhen_pipeline.md  step1_spp_baseline.md
scripts/: 01_diagnose_env.sh  02_inspect_ublox_driver.sh  03_setup_ubx_playback.sh  03b_fix_ubx_path.sh  04_debug_ubx_path.sh  05_clean_setup.sh  111 (40).txt  HOW_TO_RUN.md  TUTORIAL_del1RTK_SPP.md  TUTORIAL_run_spp_with_bag.md  TUTORIAL_urbannav_medium.md  TUTORIAL_visualize_trajectory.md  generate_analysis.py  make_map.py  rinex_to_rosbag.py  save_trajectory.py  ubx_to_rosbag.py
spp_results/: gnss_data.bag  nav.nav  obs.obs  spp.pos
src/ubx_parser/: package.xml  setup.cfg  setup.py
src/ubx_parser/config/: replay.yaml
src/ubx_parser/launch/: replay.launch.py
src/ubx_parser/test/: test_ubx_protocol.py
src/ubx_parser/ubx_parser/: replay_node.py  ubx_protocol.py  ubx_to_csv.py
